# STM32-Keyboard

./: .gitignore  .gitlab-ci.yml  Environment Setup - STM32_BTKbd.docx  PA01_01 SHLRD - STM32_BTKbd.docx  PA01_01 SRD - STM32_BTKbd.docx  README.md
.github/workflows/: c-cpp.yml
BLE_keyboard_Pool_Project_equiphillo/: .project  BLE_keyboard_Pool_Project_equiphillo Debug.launch
BLE_keyboard_Pool_Project_equiphillo/Core/Inc/: Init.h  SerialComs.h  app_bluenrg.h  keyboard.h  services.h  stm32f4xx_it.h
BLE_keyboard_Pool_Project_equiphillo/Core/Src/: Init.c  SerialComs.c  app_bluenrg.c  callbacks.c  keyboard.c  main.c  services.c  sm.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
Demo/: .cproject  .mxproject  Demo Debug.launch  Demo.ioc  Makefile  STM32Make.make
Demo/Core/Inc/: Init.h  Keyboard.h  callbacks.h  kbd_process.h  services.h  sm.h  stm32f4xx_it.h
Demo/Core/Src/: Init.c  Keyboard.c  StateMachine.c  callbacks.c  kbd_process.c  main.c  services.c  sm.c  stm32f4xx_it.c  stm32f4xx_nucleo_bus.c
DemoMakeFile/: .clang-format  .mxproject  CMakeLists.txt  DemoMakeFile.ioc  Makefile  STM32-for-VSCode.config.yaml  STM32Make.make  gcc-arm-none-eabi.cmake
DemoMakeFile/Core/Inc/: FreeRTOSConfig.h  Init.h  Keyboard.h  RTE_Components.h  StateMachine.h  callbacks.h  kbd_process.h  main.h  services.h  sm.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  stm32f4xx_nucleo_bus.h  stm32f4xx_nucleo_conf.h  stm32f4xx_nucleo_errno.h
DemoMakeFile/Core/Src/: Init.c  Keyboard.c  StateMachine.c  callbacks.c  freertos.c  kbd_process.c  main.c  services.c  sm.c  (+6 more)
DemoMakeFile/Tests/: CMakeLists.txt
(+5 files in other folders)
